# ai-perf-2026-llm-detox-hw

./: .gitignore  Makefile  pyproject.toml
docs/: task8_custom_reward.md
docs/superpowers/plans/: 2026-06-28-task8-custom-reward.md
src/detox_hw/: eval_lib.py  train_dpo.py
submissions/: rm_eval.txt  rm_training_val_metrics.json  task1_base_model_eval.txt  task1_sft_eval.json  task1_sft_eval.txt  task3_dpo_eval.json  task3_dpo_eval.txt  task6_from_sft_model_merged_ls.txt  task6_log.txt  task6_log_on_top_of_sft.txt  task6_merged_ls.txt  task6_ppo_detoxify_eval.json  task6_ppo_detoxify_eval.txt  task6_ppo_detoxify_sft_merged_eval.json  task7_log.txt  task7_log_from_sft.txt  task7_merged_from_sft.txt  task7_merged_ls.txt  task7_ppo_rm_eval.json  task7_ppo_rm_eval.txt  task7_ppo_rm_from_sft_eval.json  task8_error_log_all_defaults.txt  task8_experiments.md  task8_knob_study.sh  task8_log.txt  task8_log_DETOX_W_REL_equals_0.5_v2.txt  task8_log_echo_thresh_low.txt  task8_log_rep_floor_strict.txt  task8_log_rm_sigma_wide.txt  task8_log_sat_threshold_low.txt  task8_log_veto_lang_off.txt  task8_log_veto_rep_off.txt  task8_log_w_agree_off.txt  task8_log_w_base_off.txt  task8_log_w_rel_off.txt  task8_merged_ls.txt  task8_ppo_custom_eval.txt  task8_ppo_custom_eval_DETOX_W_REL_equals_0.5.json  task8_ppo_custom_eval_all_defaults.json  task8_ppo_custom_eval_echo_thresh_low.json  (+10 more)
tasks/: merge_adaptor.py  task1_sft_eval.py  task2_dpo_loss.py  task4_bt_loss.py  task5_reward_head.py  task8_custom_reward.py
tests/: test_task8_custom_reward.py
(+1 files in other folders)
